--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .ngx-datatable.fixed-header .datatable-header .datatable-header-inner .datatable-header-cell {
-    background: #0190ff;
+    background: #3598DB;
     color: #fff;
     font-size: 1em;
     text-transform: uppercase;
