--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -14,6 +14,30 @@
         [headerHeight]="50"
         [footerHeight]="50"
         [rowHeight]="'auto'"
-        [limit]="1">
+        [limit]="2">
     </ngx-datatable>
+  </div>
+
+  <button style="margin-bottom:2px;" type="button" (click)="newUser()" class="btn btn-success btn-block">+ New Video</button>
+  <div *ngIf="!hiddenewUser">
+    <h2>New User</h2>
+    <form #form="ngForm" (ngSubmit)="onSubmitAddUser(form.value)" class="well">
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" class="form-control" required name="name" ngModel>
+      </div>
+      <div class="form-group">
+        <label>Designation</label>
+        <input type="text" class="form-control" required name="designation" ngModel>
+      </div>
+      <div class="form-group">
+        <label>email</label>
+        <input type="text" class="form-control" name="email" ngModel>
+      </div>
+      <div class="form-group">
+        <label>Phone</label>
+        <input type="text" class="form-control" name="phone" ngModel>
+      </div>
+      <button type="submit" class="btn btn-success">Save</button>
+    </form>
   </div>
