--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,43 +1,55 @@
-<!-- <div *ngFor="let user of users">
+<div *ngFor="let user of users">
     <p> {{user.name}} </p>
     <p> {{user.designation}} </p>
     <p> {{user.email}} </p>
     <p> {{user.phone}} </p>
+    <button mat-button color="warn" (click)="deleteUser(user._id)">Delete</button>
+</div> 
+
+<div class="float-right">
+  <button mat-raised-button color="accent" data-toggle="modal" data-target="#addUserModal">Add User </button>
+</div>
+<div class="clearfix"> </div>
+
+<!-- <div>
+  <ngx-datatable class="material" [rows]="users" [columns]="[{name:'name'},{name:'designation'},{name:'email'}, {name:'phone'}]"
+    [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50" [rowHeight]="'auto'" [limit]="2">
+  </ngx-datatable>
 </div> -->
 
-<div>
-    <ngx-datatable
-      class="material"
-      [rows]="users"
-      [columns]="[{name:'name'},{name:'designation'},{name:'email'}, {name:'phone'}]"
-      [columnMode]="'force'"
-        [headerHeight]="50"
-        [footerHeight]="50"
-        [rowHeight]="'auto'"
-        [limit]="2">
-    </ngx-datatable>
-  </div>
 
-  <button style="margin-bottom:2px;" type="button" (click)="newUser()" class="btn btn-success btn-block">+ New Video</button>
-  <div *ngIf="!hiddenewUser">
-    <h2>New User</h2>
-    <form #form="ngForm" (ngSubmit)="onSubmitAddUser(form.value)" class="well">
-      <div class="form-group">
-        <label>Name</label>
-        <input type="text" class="form-control" required name="name" ngModel>
+
+<!--add user modal-->
+<div class="modal fade" id="addUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
       </div>
-      <div class="form-group">
-        <label>Designation</label>
-        <input type="text" class="form-control" required name="designation" ngModel>
+      <div class="modal-body">
+        <div class="example-container">
+          <form [formGroup]="createForm" class="create-form">
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="name" formControlName="name" #name>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="designation" formControlName="designation" #designation>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="email" formControlName="email" #email>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="phone" formControlName="phone" #phone>
+            </mat-form-field>
+          </form>
+        </div>
       </div>
-      <div class="form-group">
-        <label>email</label>
-        <input type="text" class="form-control" name="email" ngModel>
+      <div class="modal-footer">
+        <button type="button" class="primary" data-dismiss="modal">Close</button>
+        <button type="submit" (click)="addUser(name.value, designation.value, email.value, phone.value)" class="primary" data-dismiss="modal">Save</button>
       </div>
-      <div class="form-group">
-        <label>Phone</label>
-        <input type="text" class="form-control" name="phone" ngModel>
-      </div>
-      <button type="submit" class="btn btn-success">Save</button>
-    </form>
+    </div>
   </div>
+</div>
