--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -10,7 +10,7 @@
   </select>
   </div>
   <div class="m-top">
-    <a href="javascript:;" data-toggle="modal" data-target="#addModal" class="primary"> <i class="fas fa-plus-circle"></i> Add </a>
+    <a href="javascript:;" data-toggle="modal" data-target="#addModal" class="main-btn"> <i class="fas fa-plus-circle"></i> Add </a>
   </div>
 </div>
 <div style="margin-top:2em">
@@ -125,7 +125,7 @@
               put content here 
           </div>
           <div class="modal-footer">
-              <button type="button" class="primary" data-dismiss="modal">Close</button>
+              <button type="button" class="main-btn" data-dismiss="modal">Close</button>
           </div>
       </div>
   </div>
