--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ body {
     text-decoration: none;
 }
 
-.primary {
+.main-btn {
     background: #22a6b3;
     color: #fff;
     border: 0;
@@ -56,7 +56,7 @@ body {
     padding: 5px 16px;
 }
 
-.primary:hover {
+.main-btn :hover {
     background: #1b8691;
     color: #fff;
     text-decoration: none;
@@ -127,3 +127,7 @@ body {
   .example-full-width {
     width: 100%;
   }
+
+  button:focus {
+    outline: 0px !important;
+}
