--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -11,5 +11,5 @@
   <mat-form-field class="example-full-width">
     <input matInput placeholder="Phone" formControlName="phone" #phone>
   </mat-form-field>
-  <button type="submit" (click)="updateUser(name.value, designation.value, email.value, phone.value)" [disabled]="updateForm.pristine || updateForm.invalid" mat-raised-button color="primary">Save</button>
+  <!-- <button type="submit" (click)="updateUser(name.value, designation.value, email.value, phone.value)" [disabled]="updateForm.pristine || updateForm.invalid" mat-raised-button color="primary">Save</button> -->
 </form>
