--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,3 +1,18 @@
-<div *ngFor="let album of albums">
-  <p> {{album.title}}</p>
+<div class="row">
+    <h1 class="heading"> {{ galleryTitle}}</h1>
 </div>
+<div class="row"> 
+<mat-card class="col-6" *ngFor="let album of albums">
+    <mat-card-header>
+      <mat-card-title>{{album.title}}</mat-card-title>
+      <button mat-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item><mat-icon>mode_edit </mat-icon> <span>Edit</span></button>
+        <button mat-menu-item><mat-icon>delete </mat-icon> <span>Delete</span> </button>
+      </mat-menu>
+    </mat-card-header>
+    <img mat-card-image [defaultImage]="defaultImage" [lazyLoad]="album.url" [offset]="offset">
+  </mat-card>
+</div>
+
+
