--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<p>
-  home works!
-</p>
+<div *ngFor="let post of posts | slice:1:3">
+  <p> {{post.title | uppercase}} </p>
+  <button class="btn btn-primary" (click)="detailsPage(post.id)"> {{go | titlecase}} </button>
+</div>
