--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,5 +16,15 @@
       <span> gallery </span>
     </a>
   </li>
+  <li><a routerLink="/parent" routerLinkActive="active-link"> 
+    <span><i class="fas fa-images"></i> </span>
+    <span> {{parentData}} </span>
+  </a>
+</li>
+<li><a routerLink="/todo" routerLinkActive="active-link"> 
+  <span><i class="fas fa-link"></i> </span>
+  <span> todo db </span>
+</a>
+</li>
   </ul>
 </div>
