--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-2">
-      <app-menu> </app-menu>
+      <app-menu [parentData]="data"> </app-menu>
     </div>
     <div class="col-md-10">
        <router-outlet> </router-outlet>
