--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,7 +1,15 @@
 <ul>
   <li *ngFor="let salary of salaries">
-     <p>{{salary.name}} </p> 
-      <p>{{salary.salary}} </p> 
-      <button class="btn btn-primary" (click)="getSalary(salary._id)"> Get id </button>
+    <p>{{salary._id}} </p>
+    <p>{{salary.name}} </p>
+    <p>{{salary.salary}} </p>
+    <button class="btn btn-primary" (click)="getSalary(salary._id)"> Get id </button>
   </li>
-</ul> 
+</ul>
+
+<h1> {{lat}}</h1>
+
+<div *ngFor="let album of albums">
+  <h1> {{album.name}}</h1>
+  <img [src]='album.img'/>
+</div>
