--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -26,5 +26,10 @@
   <span> todo db </span>
 </a>
 </li>
+<li><a routerLink="/ngchart" routerLinkActive="active-link"> 
+  <span><i class="fas fa-link"></i> </span>
+  <span> ng chart </span>
+</a>
+</li>
   </ul>
 </div>
