spinner display till load api ,  spinner and mix component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 col-12">
       <app-menu [parentData]="data"> </app-menu>
     </div>
-    <div class="col-md-10">
+    <div class="col-md-10 col-12">
        <router-outlet> </router-outlet>
     </div>
   </div>
