--- a/src/styles.css
+++ b/src/styles.css
@@ -153,7 +153,7 @@ body {
     margin-top: 10px;
 }
 
-.darkmode--activated p, .darkmode--activated li {
+.darkmode--activated p, .darkmode--activated li, .darkmode--activated h1 {
     color: #fff;
   }
 
