--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -11,16 +11,25 @@
     <form [formGroup]="addForm">
       <mat-form-field class="example-full-width">
         <input matInput placeholder="title" formControlName="title" #title>
-        <mat-error *ngIf="addForm.controls['title'].hasError('required') && (addForm.controls['title'].dirty || addForm.controls['title'].touched)">This field is required</mat-error>
-        <mat-error *ngIf="addForm.controls['title'].hasError('pattern') && (addForm.controls['title'].dirty || addForm.controls['title'].touched)">Title should not be longer</mat-error>
+        <mat-error
+          *ngIf="addForm.controls['title'].hasError('required') && (addForm.controls['title'].dirty || addForm.controls['title'].touched)">
+          This field is required</mat-error>
+        <mat-error
+          *ngIf="addForm.controls['title'].hasError('pattern') && (addForm.controls['title'].dirty || addForm.controls['title'].touched)">
+          Title should not be longer</mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <input matInput placeholder="url" formControlName="url" #url>
-        <mat-error *ngIf="addForm.controls['url'].hasError('required') && (addForm.controls['url'].dirty || addForm.controls['url'].touched)">This field is required</mat-error>
-        <mat-error *ngIf="addForm.controls['url'].hasError('pattern') && (addForm.controls['url'].dirty || addForm.controls['url'].touched)">Please enter valid image url </mat-error>
+        <mat-error
+          *ngIf="addForm.controls['url'].hasError('required') && (addForm.controls['url'].dirty || addForm.controls['url'].touched)">
+          This field is required</mat-error>
+        <mat-error
+          *ngIf="addForm.controls['url'].hasError('pattern') && (addForm.controls['url'].dirty || addForm.controls['url'].touched)">
+          Please enter valid image url </mat-error>
       </mat-form-field>
-      <button type="submit" (click)="addGallery( title.value, url.value)" [disabled]="addForm.pristine || addForm.invalid" mat-raised-button color="primary" >Save</button>
-     </form> 
+      <button type="submit" (click)="addGallery( title.value, url.value)"
+        [disabled]="addForm.pristine || addForm.invalid" mat-raised-button color="primary">Save</button>
+    </form>
   </div>
 </div>
 
@@ -49,10 +58,12 @@
 <pagination-controls (pageChange)="p = $event"></pagination-controls>
 
 <form [formGroup]="testForm" (ngSubmit)="sub()">
-    <input type="text" formControlName="yourName" #yourName>
-    <span class="required" *ngIf="testForm.controls['yourName'].hasError('required') && (testForm.controls['yourName'].dirty || testForm.controls['yourName'].touched)">This field is required</span>
-    <input type="text" formControlName="yourAge" #yourAge>
-    <button type="submit" [disabled]="testForm.pristine || testForm.invalid"> add </button>
+  <input type="text" formControlName="yourName" #yourName>
+  <span class="required"
+    *ngIf="testForm.controls['yourName'].hasError('required') && (testForm.controls['yourName'].dirty || testForm.controls['yourName'].touched)">This
+    field is required</span>
+  <input type="text" formControlName="yourAge" #yourAge>
+  <button type="submit" [disabled]="testForm.pristine || testForm.invalid"> add </button>
 </form>
 
 <div *ngIf="isUserLoggedin; else logout">
@@ -61,6 +72,105 @@
 </div>
 
 <ng-template #logout>
-    <button (click)="loggedIn()"> login</button>
+  <button (click)="loggedIn()"> login</button>
 </ng-template>
 
+<br>
+<input type="text" #searchcontrol name="search">
+
+<button (click)="search(searchcontrol)"> Search </button>
+
+<br>
+
+<!-- <div class="owl-carousel owl-theme" id="introSilder">
+  <div class="item">
+    <img src="https://image.shutterstock.com/image-photo/colorful-fo-election-vote-hand-600w-794518426.jpg" alt="imagename">
+    <figcaption>
+     first text will come here
+    </figcaption>
+  </div>
+  <div class="item">
+      <img src="https://image.shutterstock.com/image-photo/many-thumbs-idea-600w-229841500.jpg" alt="imagename">
+      <figcaption>
+          second text will come here
+        </figcaption>
+  </div>
+  <div class="item">
+      <img src="https://cdn.pixabay.com/photo/2018/06/15/08/30/african-3476371_1280.jpg" alt="imagename">
+      <figcaption>
+         third text will come here
+        </figcaption>
+  </div>
+</div> -->
+
+<!-- <div class="slider-banner">
+  <div>
+    <img src="https://image.shutterstock.com/image-photo/colorful-fo-election-vote-hand-600w-794518426.jpg" alt="imagename">
+    <figcaption>
+     first text will come here
+    </figcaption>
+  </div>
+  <div>
+    <img src="https://image.shutterstock.com/image-photo/many-thumbs-idea-600w-229841500.jpg" alt="imagename">
+    <figcaption>
+        second text will come here
+      </figcaption>
+  </div>
+  <div>
+    <img src="https://cdn.pixabay.com/photo/2018/06/15/08/30/african-3476371_1280.jpg" alt="imagename">
+    <figcaption>
+       third text will come here
+      </figcaption>
+  </div>
+</div> -->
+
+<owl-carousel [options]="mySlideOptions" [carouselClasses]="['owl-theme', 'sliding']" >
+  <div class="item slide-banner" *ngFor="let image of mySlideImages;let i = index">
+    <div>
+      <img src={{image.url}} alt="{{image.alt}}"/>
+      <h2> {{image.text}}</h2>
+    </div>
+  </div>
+  </owl-carousel>
+
+
+    <!-- <div class="bd-example">
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://image.shutterstock.com/image-photo/colorful-fo-election-vote-hand-600w-794518426.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+        
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://image.shutterstock.com/image-photo/many-thumbs-idea-600w-229841500.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+          
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://cdn.pixabay.com/photo/2018/06/15/08/30/african-3476371_1280.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+            
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div> -->
